--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,7 @@
 <script src="https://www.w3schools.com/lib/w3.js"></script>
 <div w3-include-html="index.html"></div>
 <script>w3.includeHTML();</script>
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/JoCq2sWe-gQ?si=tXOyskJwcvbtRdWM&amp;controls=0&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<section id="images">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/JoCq2sWe-gQ?si=tXOyskJwcvbtRdWM&amp;controls=0&amp;start=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <img src="https://cdn.britannica.com/29/121829-050-911F77EC/freshwater-aquarium.jpg?w=400&h=300&c=crop" title="aquarium-img">
+</section>
