--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
         </div>
     </div>
 </div>
-<form name="contact_form" method="post" onSubmit="return evalid()">
+<form id="contact_form" method="post" onSubmit="return evalid()" class="container mt-4">
 	<h2>Send me an email!</h2>
     <table>
   	<tr>
